--- a/app/src/main/res/drawable/bg_edittext_white.xml
+++ b/app/src/main/res/drawable/bg_edittext_white.xml
@@ -4,6 +4,6 @@
 
     <stroke android:color="@color/stroke_edittext"
         android:width="1dp"/>
-    <solid android:color="@color/white" />
+    <solid android:color="@color/putih" />
     <corners android:radius="16dp" />
 </shape>
