--- a/app/src/main/res/drawable/bg_edittext_white2.xml
+++ b/app/src/main/res/drawable/bg_edittext_white2.xml
@@ -4,6 +4,6 @@
 
     <stroke android:color="@color/stroke_edittext"
         android:width="1dp"/>
-    <solid android:color="@color/white" />
+    <solid android:color="@color/background" />
     <corners android:radius="12dp" />
 </shape>
