--- a/app/src/main/res/drawable/bg_list_white.xml
+++ b/app/src/main/res/drawable/bg_list_white.xml
@@ -2,5 +2,6 @@
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="@color/putih"/>
+    <stroke android:color="@color/stroke_edittext" android:width="1dp"/>
     <corners android:radius="24dp"/>
 </shape>
