--- a/app/src/main/res/drawable/bg_stroke_white_round.xml
+++ b/app/src/main/res/drawable/bg_stroke_white_round.xml
@@ -4,5 +4,6 @@
 
     <stroke android:color="@color/stroke_edittext"
         android:width="1dp"/>
+    <corners android:radius="500dp"/>
     <solid android:color="@color/putih" />
 </shape>
