--- a/app/src/main/res/drawable/ic_switch_on.xml
+++ b/app/src/main/res/drawable/ic_switch_on.xml
@@ -5,8 +5,8 @@
     android:viewportHeight="16">
   <path
       android:pathData="M8,0L22,0A8,8 0,0 1,30 8L30,8A8,8 0,0 1,22 16L8,16A8,8 0,0 1,0 8L0,8A8,8 0,0 1,8 0z"
-      android:fillColor="#3967d6"/>
+      android:fillColor="@color/utama"/>
   <path
       android:pathData="M22,8m-6,0a6,6 0,1 1,12 0a6,6 0,1 1,-12 0"
-      android:fillColor="#fff"/>
+      android:fillColor="@color/putih"/>
 </vector>
