--- a/app/src/main/res/layout/activity_transaksi.xml
+++ b/app/src/main/res/layout/activity_transaksi.xml
@@ -42,7 +42,52 @@
                 android:padding="16dp"
                 android:src="@drawable/ic_arrow" />
 
+            <RelativeLayout
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:clickable="true"
+                android:layout_marginRight="16dp">
+
+                <ImageView
+                    android:id="@+id/btsave"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerInParent="true"
+                    android:clickable="true"
+                    android:src="@drawable/ic_save" />
+
+                <TextView
+                    android:id="@+id/txtnotif"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_alignParentEnd="true"
+                    android:background="@drawable/bg_notif"
+                    android:gravity="center"
+                    android:padding="1dp"
+                    android:text="99"
+                    android:textColor="@color/putih_tetap"
+                    android:textSize="10dp"
+                    android:textStyle="bold" />
+
+                <RelativeLayout
+                    android:id="@+id/btpending"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/selector_transparan"
+                    android:clickable="true"></RelativeLayout>
+
+
+            </RelativeLayout>
+
+
         </RelativeLayout>
+
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -83,6 +128,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
                 <TextView
+                    android:visibility="gone"
                     android:id="@+id/txtpesan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
