--- a/app/src/main/res/layout/activity_home_item.xml
+++ b/app/src/main/res/layout/activity_home_item.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     android:id="@+id/btpindah"
+    android:background="@drawable/selector_transparan"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -89,9 +90,9 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginLeft="66dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/background" />
+        android:layout_marginBottom="8dp"
+        android:background="@color/stroke_edittext" />
 
 </LinearLayout>
