--- a/app/src/main/res/layout/activity_transaksi_detail.xml
+++ b/app/src/main/res/layout/activity_transaksi_detail.xml
@@ -88,7 +88,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="16dp"
                         android:layout_marginRight="16dp"
-                        android:layout_marginBottom="48dp"
                         android:background="@drawable/bg_list_white"
                         android:orientation="vertical"
                         android:padding="16dp">
@@ -128,6 +127,48 @@
                             android:paddingTop="8dp"
                             android:paddingBottom="8dp">
 
+                            <EditText
+                                android:id="@+id/ed_namaCustomer"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="8dp"
+                                android:layout_weight="1"
+                                android:background="@drawable/bg_edittext_white2"
+                                android:hint="Nama Pelanggan"
+                                android:padding="16dp"
+                                android:textColor="@color/textcolor"
+                                android:textColorHint="@color/hint"
+                                android:textSize="14dp"
+                                android:visibility="gone" />
+
+                            <TextView
+                                android:id="@+id/buttonaddcustomer"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Tambah"
+                                android:textColor="@color/utama"
+                                android:textSize="14dp"
+                                android:textStyle="bold"
+                                android:visibility="gone" />
+                        </LinearLayout>
+
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:background="@color/background" />
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:orientation="horizontal"
+                            android:paddingTop="8dp"
+                            android:paddingBottom="8dp">
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -139,47 +180,14 @@
 
                             <androidx.appcompat.widget.AppCompatToggleButton
                                 android:id="@+id/toggleButtonmetodebayar"
-                                android:layout_width="36dp"
-                                android:layout_height="20dp"
-                                android:background="@drawable/selector_switch"
+                                android:layout_width="84dp"
+                                android:layout_height="28dp"
+                                android:background="@drawable/selector_switch_tf"
                                 android:padding="4dp"
                                 android:textOff=""
                                 android:textOn="" />
 
                         </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:orientation="horizontal"
-                            android:paddingTop="8dp"
-                            android:paddingBottom="8dp">
-
-                            <EditText
-                                android:visibility="gone"
-                                android:id="@+id/ed_namaCustomer"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:padding="16dp"
-                                android:layout_marginRight="8dp"
-                                android:background="@drawable/bg_edittext_white2"
-                                android:hint="Nama Pelanggan"
-                                android:textColorHint="@color/hint"
-                                android:textColor="@color/textcolor"
-                                android:textSize="14dp" />
-
-                            <TextView
-                                android:visibility="gone"
-                                android:id="@+id/buttonaddcustomer"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Tambah"
-                                android:textColor="@color/utama"
-                                android:textSize="14dp"
-                                android:textStyle="bold" />
-                        </LinearLayout>
-
 
                         <View
                             android:layout_width="match_parent"
@@ -199,13 +207,13 @@
                             android:textSize="14dp" />
 
                         <EditText
-                            android:inputType="number"
                             android:id="@+id/bayarpenjuan"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:background="@drawable/bg_edittext_white2"
                             android:hint="Rp0"
+                            android:inputType="number"
                             android:padding="16dp"
                             android:textColorHint="@color/hint"
                             android:textSize="14dp" />
@@ -244,8 +252,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        android:gravity="center"
+        android:layout_marginLeft="-2dp"
+        android:layout_marginRight="-2dp"
+        android:layout_marginBottom="-2dp"
         android:background="@drawable/bg_stroke_white"
+        android:gravity="center"
         android:orientation="vertical">
 
         <LinearLayout
@@ -278,19 +289,19 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_margin="8dp"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/btn_tombolsimpan"
-                android:layout_margin="8dp"
-                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
                 android:background="@drawable/selector_stroke"
                 android:clickable="true"
+                android:gravity="center"
                 android:padding="16dp"
                 android:text="Simpan"
                 android:textColor="@color/textcolor"
@@ -299,13 +310,13 @@
 
             <TextView
                 android:id="@+id/btn_tombolbayar"
-                android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:layout_margin="8dp"
-                android:gravity="center"
-                android:clickable="true"
                 android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
                 android:background="@drawable/selector_login"
+                android:clickable="true"
+                android:gravity="center"
                 android:padding="16dp"
                 android:text="Bayar"
                 android:textColor="@color/putih_tetap"
