--- a/app/src/main/res/drawable/selector_switch_tf.xml
+++ b/app/src/main/res/drawable/selector_switch_tf.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" android:enterFadeDuration="@android:integer/config_shortAnimTime" android:exitFadeDuration="@android:integer/config_shortAnimTime">
 
 
-    <item android:drawable="@drawable/ic_switch_tunai" android:state_checked="true">
+    <item android:drawable="@drawable/ic_switch_tunai" android:state_checked="false">
 
     </item> <!-- pressed -->
-    <item android:drawable="@drawable/ic_switch_tf" android:state_checked="false"></item> <!-- focused -->
+    <item android:drawable="@drawable/ic_switch_tf" android:state_checked="true"></item> <!-- focused -->
     <!-- default -->
 </selector>
