--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -121,7 +121,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:padding="8dp"
-                                android:text="Total Keuntungan"
+                                android:text="Total Penjualan Hari ini"
                                 android:textColor="@color/hint_utama"
                                 android:textSize="14dp" />
 
