--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="transparans2">#0F000000</color>
     <color name="red">#F16850</color>
     <color name="red2">#AF2810</color>
+    <color name="transparant_white20">#33FFFFFF</color>
 
     //text
     <color name="hint0">#F1F1F1</color>
